Can now view topics

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".gui.subject.AddSubject" />
         <activity android:name=".gui.subject.UpdateSubject" />
+        <activity android:name=".gui.topic.ViewTopics" />
     </application>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
