--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,12 @@ android {
         applicationId "com.alfoirazabal.studyquizmaker"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 3
-        versionName "0.2"
+        versionCode 4
+        versionName "0.25"
+
+        vectorDrawables {
+            useSupportLibrary = true
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
