--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".gui.topic.ViewTopics" />
         <activity android:name=".gui.topic.AddTopic" />
         <activity android:name=".gui.topic.UpdateTopic" />
+        <activity android:name=".gui.test.ViewTests" />
     </application>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
