--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.StudyQuizmaker"
-        android:requestLegacyExternalStorage="true">
+        android:theme="@style/Theme.StudyQuizmaker">
         <activity android:name=".gui.subject.ViewSubjects">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +25,5 @@
         <activity android:name=".gui.test.AddTest" />
         <activity android:name=".gui.test.UpdateTest" />
     </application>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
