--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".gui.test.ViewTests" />
         <activity android:name=".gui.test.AddTest" />
         <activity android:name=".gui.test.UpdateTest" />
+        <activity android:name=".gui.test.panel.PanelTestView" />
     </application>
 
 </manifest>
