--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".gui.test.AddTest" />
         <activity android:name=".gui.test.UpdateTest" />
         <activity android:name=".gui.test.panel.PanelTestView" />
+        <activity android:name=".gui.test.panel.questions.questionsimple.ViewQuestionsSimple" />
     </application>
 
 </manifest>
