--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".gui.test.panel.PanelTestView" />
         <activity android:name=".gui.test.panel.questions.questionsimple.ViewQuestionsSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.AddQuestionSimple" />
+        <activity android:name=".gui.test.panel.questions.questionsimple.UpdateQuestionSimple" />
     </application>
 
 </manifest>
