--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".gui.test.panel.questions.questionsimple.ViewQuestionsSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.AddQuestionSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.UpdateQuestionSimple" />
+        <activity android:name=".gui.test.panel.questions.questionsimple.AnswerQuestionSimple" />
     </application>
 
 </manifest>
