Can now transition between questions
Can now transition between questions and added animations for backward and forward transition.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".gui.test.panel.questions.questionsimple.UpdateQuestionSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.AnswerQuestionSimple" />
         <activity android:name=".domain.testrun.ViewRunResults" />
+        <activity android:name=".gui.test.panel.questions.questionsimple.AnswerQuestionSimplePicker" />
     </application>
 
 </manifest>
