Can now finish the test from the answers picker

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".gui.test.panel.questions.questionsimple.AddQuestionSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.UpdateQuestionSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.testrun.AnswerQuestionSimple" />
-        <activity android:name=".domain.testrun.ViewRunResults" />
+        <activity android:name=".gui.test.panel.questions.questionsimple.testrun.ViewRunResults" />
         <activity android:name=".gui.test.panel.questions.questionsimple.testrun.AnswerQuestionSimplePicker" />
     </application>
 
