--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         <activity android:name=".gui.test.panel.questions.questionsimple.testrun.AnswerQuestionSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.testrun.ViewFinalResults" />
         <activity android:name=".gui.test.panel.questions.questionsimple.testrun.AnswerQuestionSimplePicker" />
-        <activity android:name=".gui.test.panel.questions.questionsimple.testrun.runresults.ViewRunResults" />
+        <activity android:name=".gui.test.panel.questions.questionsimple.testrun.results.ViewRunResults" />
+        <activity android:name=".gui.test.panel.questions.questionsimple.testrun.results.ViewTestRuns" />
     </application>
 
 </manifest>
