--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,11 @@
         <activity android:name=".gui.test.panel.questions.questionsimple.ViewQuestionsSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.AddQuestionSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.UpdateQuestionSimple" />
-        <activity android:name=".gui.test.panel.questions.questionsimple.testrun.AnswerQuestionSimple" />
-        <activity android:name=".gui.test.panel.questions.questionsimple.testrun.ViewFinalResults" />
-        <activity android:name=".gui.test.panel.questions.questionsimple.testrun.AnswerQuestionSimplePicker" />
-        <activity android:name=".gui.test.panel.questions.questionsimple.testrun.results.ViewRunResults" />
-        <activity android:name=".gui.test.panel.questions.questionsimple.testrun.results.ViewTestRuns" />
+        <activity android:name=".gui.test.panel.testrun.AnswerQuestionSimple" />
+        <activity android:name=".gui.test.panel.testrun.ViewFinalResults" />
+        <activity android:name=".gui.test.panel.testrun.AnswerQuestionSimplePicker" />
+        <activity android:name=".gui.test.panel.testrun.results.ViewRunResults" />
+        <activity android:name=".gui.test.panel.testrun.results.ViewTestRuns" />
     </application>
 
 </manifest>
