--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".gui.test.panel.questions.questionsimple.AddQuestionSimple" />
         <activity android:name=".gui.test.panel.questions.questionsimple.UpdateQuestionSimple" />
         <activity android:name=".gui.test.panel.testrun.AnswerQuestionSimple" />
-        <activity android:name=".gui.test.panel.testrun.ViewFinalResults" />
+        <activity android:name=".gui.test.panel.testrun.results.ViewFinalResults" />
         <activity android:name=".gui.test.panel.testrun.AnswerQuestionSimplePicker" />
         <activity android:name=".gui.test.panel.testrun.results.ViewRunResults" />
         <activity android:name=".gui.test.panel.testrun.results.ViewTestRuns" />
