--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".gui.test.panel.testrun.AnswerQuestionSimplePicker" />
         <activity android:name=".gui.test.panel.testrun.results.ViewRunResults" />
         <activity android:name=".gui.test.panel.testrun.results.ViewTestRuns" />
+        <activity android:name=".gui.test.panel.questions.questiontf.AddQuestionTF" />
     </application>
 
 </manifest>
