Can now score simple questions at test finish.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".gui.test.panel.questions.questiontf.AddQuestionTF" />
         <activity android:name=".gui.test.panel.questions.questiontf.UpdateQuestionTF" />
         <activity android:name=".gui.test.panel.testrun.answer.AnswerQuestionTF" />
+        <activity android:name=".gui.test.panel.testrun.answer.ScoreSimpleQuestions" />
     </application>
 
 </manifest>
