--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".gui.test.panel.questions.questiontf.UpdateQuestionTF" />
         <activity android:name=".gui.test.panel.testrun.answer.AnswerQuestionTF" />
         <activity android:name=".gui.test.panel.testrun.answer.ScoreSimpleQuestions" />
+        <activity android:name=".gui.test.panel.questions.questionmc.AddQuestionMC" />
     </application>
 
 </manifest>
