--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".gui.test.panel.testrun.answer.ScoreSimpleQuestions" />
         <activity android:name=".gui.test.panel.questions.questionmc.AddQuestionMC" />
         <activity android:name=".gui.test.panel.testrun.answer.AnswerQuestionMC" />
+        <activity android:name=".gui.test.panel.testrun.results.questions.ViewQuestionMCResponse" />
     </application>
 
 </manifest>
