--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.alfoirazabal.studyquizmaker"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 9
-        versionName "0.9"
+        versionCode 10
+        versionName "1.0 - Sunny beginnings"
 
         vectorDrawables {
             useSupportLibrary = true
