--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:name=".gui.test.panel.testrun.results.questions.ViewQuestionSingleResponse" />
         <activity android:name=".gui.test.panel.testrun.results.questions.ViewQuestionMCResponse" />
         <activity android:name=".gui.test.panel.testrun.results.questions.ViewQuestionTFResponse" />
+        <activity android:name=".gui.test.panel.questions.questionmo.AddQuestionMO" />
     </application>
 
 </manifest>
