--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".gui.test.panel.testrun.results.questions.ViewQuestionMCResponse" />
         <activity android:name=".gui.test.panel.testrun.results.questions.ViewQuestionTFResponse" />
         <activity android:name=".gui.test.panel.questions.questionmo.AddQuestionMO" />
+        <activity android:name=".gui.test.panel.testrun.answer.AnswerQuestionMO" />
     </application>
 
 </manifest>
