--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.alfoirazabal.studyquizmaker"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 10
-        versionName "1.0 - Sunny beginnings"
+        versionCode 11
+        versionName "1.5 - Zairalab"
 
         vectorDrawables {
             useSupportLibrary = true
